tests/positive/MiniC/ExportName/Input.juvix
module Input;

open import Stdlib.Prelude;

fun : Nat;
fun := six;

end;
