tests/negative/230/Prod.juvix
module Prod;

open import Stdlib.Prelude;
open import Foo;
     import Foo.Data.Bool;

fi : Foo.Data.Bool;
fi := Foo.Data.Bool.false;

end;
